# ChangeLog for app-xemacs/leim
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/leim/ChangeLog,v 1.22 2011/07/22 11:25:06 xarthisius Exp $

*leim-1.36 (10 Jul 2014)

  10 Jul 2014; Mats Lidell <matsl@gentoo.org> +leim-1.36.ebuild:
  Pre release version bump.

*leim-1.34 (03 Sep 2013)

  03 Sep 2013; Mats Lidell <matsl@gentoo.org> +leim-1.34.ebuild:
  app-xemacs/leim: Upstream experimental version bump

*leim-1.33 (19 Jul 2013)

  19 Jul 2013; Mats Lidell <matsl@gentoo.org> +leim-1.33.ebuild, +metadata.xml:
  app-xemacs/leim: Upstream experimental version bump and use EAPI=5