@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/leim/leim-1.31.ebuild,v 1.6 2011/07/22 11:25:06 xarthisius Exp $
 
