@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/leim/ChangeLog,v 1.22 2011/07/22 11:25:06 xarthisius Exp $
 
+*leim-1.37 (19 Sep 2014)
+
+  19 Sep 2014; Mats Lidell <matsl@gentoo.org> -leim-1.33.ebuild,
+  -leim-1.34.ebuild, +leim-1.37.ebuild:
+  Upstream pre release version bump
+
 *leim-1.36 (10 Jul 2014)
 
   10 Jul 2014; Mats Lidell <matsl@gentoo.org> +leim-1.36.ebuild:
